# Rust.Diesel.PersonalPronoun.20190731072900

./: ReadMe.md
src/0/personal_pronoun/: .env  Cargo.toml  PersonalPronoun.sqlite3
src/0/personal_pronoun/migrations/2019-07-30-225809_create_FirstPersons/: up.sql
src/0/personal_pronoun/migrations/2019-07-30-230702_insert_FirstPersons/: down.sql  up.sql
src/0/personal_pronoun/src/: schema.rs
src/1/personal_pronoun/migrations/2019-07-30-225809_create_FirstPersons/: down.sql
src/1/personal_pronoun/src/: main.rs  models.rs  schema.rs
src/2/personal_pronoun/: PersonalPronoun.sqlite3
src/2/personal_pronoun/src/: models.rs  schema.rs
src/3/personal_pronoun/: Cargo.toml  PersonalPronoun.sqlite3
src/3/personal_pronoun/migrations/2019-07-30-230702_insert_FirstPersons/: FirstPersons.tsv
src/3/personal_pronoun/migrations/2019-07-31-234830_create_SecondPersons/: down.sql
src/3/personal_pronoun/migrations/2019-08-01-011503_create_ThirdPersons/: up.sql
src/3/personal_pronoun/migrations/2019-08-01-011737_insert_ThirdPersons/: down.sql  up.sql
src/3/personal_pronoun/src/: main.rs  schema.rs
src/4/personal_pronoun/: PersonalPronoun.sqlite3
src/4/personal_pronoun/migrations/2019-07-31-040423_recreate_not_null_FirstPersons/: up.sql
src/4/personal_pronoun/migrations/2019-07-31-234830_create_SecondPersons/: up.sql
src/4/personal_pronoun/migrations/2019-07-31-235917_insert_SecondPersons/: SecondPersons.tsv  down.sql  up.sql
src/4/personal_pronoun/migrations/2019-08-01-011503_create_ThirdPersons/: down.sql
src/4/personal_pronoun/src/: main.rs  models.rs
(+1 files in other folders)
